# Sundance

./: CMakeLists.txt  Makefile.am  Makefile.common  Makefile.export.TSFExtended.in  Makefile.export.in  Makefile.in  Makefile.internal.in  Makefile.sample  Makefile.sample.old-build-system  Makefile.site.sundance.in  aclocal.m4  bootstrap  configure  configure.ac  make-tags.sh
Playa/: CMakeLists.txt
Playa/examples/: CMakeLists.txt
Playa/maintenance/: changeNames.sh
Playa/src/: CMakeLists.txt  EpetraPlayaOperator.cpp  EpetraPlayaOperator.hpp  NOX_Playa.hpp  NOX_Playa_Group.cpp  NOX_Playa_Group.hpp  NOX_Playa_StatusTestBuilder.cpp  NOX_Playa_StatusTestBuilder.hpp  NOX_Playa_Vector.cpp  NOX_Playa_Vector.hpp  NOX_StatusTest_SafeCombo.cpp  NOX_StatusTest_SafeCombo.hpp  PlayaAmesosSolver.cpp  PlayaAmesosSolver.hpp  PlayaAnasaziAdapter.hpp  PlayaAnasaziEigensolver.cpp  PlayaAnasaziEigensolverDecl.hpp  PlayaAnasaziEigensolverImpl.hpp  PlayaAztecSolver.cpp  PlayaAztecSolver.hpp  PlayaBICGSTABSolver.cpp  PlayaBICGSTABSolverDecl.hpp  PlayaBICGSTABSolverImpl.hpp  PlayaBasicLMBFGS.cpp  PlayaBasicLMBFGS.hpp  PlayaBelosAdapter.hpp  PlayaBelosSolver.cpp  PlayaBelosSolver.hpp  PlayaBlockIterator.cpp  PlayaBlockIteratorDecl.hpp  PlayaBlockIteratorImpl.hpp  PlayaBlockOperatorBaseDecl.hpp  PlayaBlockTriangularSolver.cpp  PlayaBlockTriangularSolver.hpp  PlayaBlockTriangularSolverDecl.hpp  PlayaBlockTriangularSolverImpl.hpp  PlayaBlockVectorBase.cpp  PlayaBlockVectorBaseDecl.hpp  PlayaBlockVectorBaseImpl.hpp  PlayaBlockVectorSpace.cpp  (+227 more)
Playa/tests/: CMakeLists.txt
doc/Doxygen/: BC.dox  Basics.dox  CellFilter.dox  ConfiguringTrilinos.dox  DiscreteFunc.dox  Downloads.dox  Doxyfile  Doxyfile.core.in  Doxyfile.options  Doxyfile.std-mesh.in  Doxyfile.trilinos.in  Doxyfile.user.in  Doxyfile.utils.in  Equations.dox  Examples.dox  Expr.dox  FAQ.dox  FieldReading.dox  Footer.html  Header.html  Installation.dox  Licensing.dox  Limitations.dox  LinearProblem.dox  LinearSolvers.dox  Makefile.am  Makefile.in  MeshSource.dox  NonlinearProblem.dox  NonlinearSolvers.dox  References.dox  TopicalIndex.dox  UsersGuide.dox  index.dox
examples-tutorial/: Exo2Triangle.cpp  Makefile.am  Makefile.in  PostPotentialFlow.cpp  PressureStabilizedNS2D.cpp  PressureStabilizedNS3D.cpp  PressureVessel2D.cpp  RadiationDiffusion1D.cpp  ReadField.cpp  VSNS2D.cpp  aztec.xml  nox.xml  postMesher.cubit  vessel2D.exo  vessel2D.ncdf
examples-tutorial/c++/: CDR.xml  CDR_control.xml  CMakeLists.txt  ControlCDR.cpp  CubicCDR.cpp  Example1-Laplace3D.cpp  Example2-SteadyRadDiff2D.cpp  Example3-TransientHeat2D.cpp  Example4-TransientNonlinear1D.cpp  Example5-PoissonBoltzmann2D.cpp  Example6-TransientTwoZoneHeat2D.cpp  Example7-NonlinearPeriodicCoupled.cpp  Exo2Triangle.cpp  Makefile.am  Makefile.in  MixedOrderPrec.cpp  PoissonBoltzmannDemo2D.cpp  PoissonDemo3D.cpp  PostPotentialFlow.cpp  PostPotentialFlow_Introduction.tex  PressureStabilizedNS2D.cpp  PressureStabilizedNS3D.cpp  PressureVessel2D.cpp  RadiationDiffusion1D.cpp  Rayleigh-Benard.cpp  ReadField.cpp  ThermalLTI.cpp  VSNS2D.cpp  mixedorderexample.xml  postGeom.ps  transientNonlinear1D.cpp
examples-tutorial/data/: aztec.xml  bicgstab.xml  nox-aztec.xml  nox.xml
examples-tutorial/python/: Makefile.am  Makefile.in  PressureStabilizedNS2D.py  TaylorHoodStokes.py  aztecSolver.py  noxSolver.py
python/example/: CMakeLists.txt  Makefile.am  Makefile.in  amesosSolver.py  exAToC.py  exBlockTest.py  exComplexHelmholtz1D.py  exConvTest2D.py  exCylPoisson3D.py  exHelmholtz1D.py  exNonlinearPartialDomain.py  exPoisson1D.py  exPoisson2D.py  exPoisson3D.py  exRadDiff1D.py  exSpectralPoisson2D.py  exTwoZoneLaplace1D.py  exVorticityStokes2D.py  noxSolver.py
python/src/: AToC.i  Array.i  Basis.i  CMakeLists.txt  CellFilter.i  CoordinateSystem.i  Discrete.i  Functional.i  Integral.i  LinearEigenproblem.i  LinearProblem.i  Makefile.am  Makefile.in  Mesh.i  NonlinearProblem.i  ParameterList.i  Playa.i  PlayaHack.hpp  PySundance.i  PySundanceBasisCheck.cpp  PySundanceBasisCheck.hpp  PySundanceCallback.cpp  PySundanceCallback.hpp  PySundanceCellPredicate.cpp  PySundanceCellPredicate.hpp  PySundanceFIATQuadratureAdapter.cpp  PySundanceFIATQuadratureAdapter.hpp  PySundanceFIATScalarAdapter.cpp  PySundanceFIATScalarAdapter.hpp  PySundanceLinearSolver.cpp  PySundanceLinearSolver.hpp  PySundanceNOXSolverHandle.cpp  PySundanceNOXSolverHandle.hpp  PyTeuchos_Utils.cpp  Quadrature.i  Spectral.i  Symbolics.i  TSF.i  TSFHack.hpp  Utils.i  (+3 more)
src-core/: CMakeLists.txt  Makefile.am  Makefile.in
src-core/Evaluation/: SundanceBinaryEvaluator.hpp  SundanceBruteForceEvaluator.cpp  SundanceBruteForceEvaluator.hpp  SundanceCellDiameterEvaluator.cpp  SundanceCellDiameterEvaluator.hpp  SundanceCellVectorEvaluator.cpp  SundanceCellVectorEvaluator.hpp  SundanceChainRuleEvaluator.cpp  SundanceChainRuleEvaluator.hpp  SundanceChainRuleSum.cpp  SundanceChainRuleSum.hpp  SundanceConstantEvaluator.cpp  SundanceConstantEvaluator.hpp  SundanceCoordExprEvaluator.cpp  SundanceCoordExprEvaluator.hpp  SundanceCurveNormEvaluator.cpp  SundanceDerivOfSymbFuncEvaluator.cpp  SundanceDerivOfSymbFuncEvaluator.hpp  SundanceDiffOpEvaluator.cpp  SundanceDiffOpEvaluator.hpp  SundanceEvalManager.cpp  (+39 more)
src-interop/: CMakeLists.txt  Makefile.am  Makefile.in
src-std-framework/: CMakeLists.txt  Makefile.am  Makefile.in  SundanceDefaultPath.hpp.in
src-std-mesh/: CMakeLists.txt  Makefile.am  Makefile.in
src-utils/: CMakeLists.txt  Makefile.am  Makefile.in  SundanceConfig.h.in
src-xml/: Makefile.am  Makefile.in  SundanceExprParser.cpp  SundanceExprParser.hpp  SundanceExprScanner.cpp  SundanceExprScanner.hpp  SundanceInterpreter.cpp  SundanceInterpreter.hpp  SundanceObjectBuilder.cpp  SundanceObjectBuilder.hpp  SundanceToken.cpp  SundanceToken.hpp  SundanceVarMap.hpp  SundanceXMLBasisBuilder.cpp  SundanceXMLBasisBuilder.hpp  SundanceXMLCellFilterBuilder.cpp  SundanceXMLExprBuilder.cpp  SundanceXMLFunctionBuilder.cpp  SundanceXMLFunctionBuilder.hpp  SundanceXMLObjectBuilder.hpp  SundanceXMLQuadratureBuilder.cpp  SundanceXMLQuadratureBuilder.hpp
(+1228 files in other folders)
